--- a/CleanData/Guideline Creation/references.bib
+++ b/CleanData/Guideline Creation/references.bib
@@ -1,18 +1,4 @@
 
-@article{votier2017,
-	title = {Effects of age and reproductive status on individual foraging site fidelity in a long-lived marine predator},
-	author = {Votier, Stephen C. and Fayet, Annette L. and Bearhop, Stuart and Bodey, Thomas W. and Clark, Bethany L. and Grecian, James and Guilford, Tim and Hamer, Keith C. and Jeglinski, Jana W. E. and Morgan, Greg and Wakefield, Ewan and Patrick, Samantha C.},
-	year = {2017},
-	month = {07},
-	date = {2017-07-26},
-	journal = {Proceedings of the Royal Society B: Biological Sciences},
-	pages = {20171068},
-	volume = {284},
-	number = {1859},
-	doi = {10.1098/rspb.2017.1068},
-	url = {https://royalsocietypublishing.org/doi/10.1098/rspb.2017.1068},
-	note = {Publisher: Royal Society}
-}
 
 
 
@@ -139,7 +125,7 @@
 	title = {Environmentally Sensitive Areas (England)},
 	author = {{Natural England}},
 	year = {2024},
-	url = {https://www.data.gov.uk/dataset/a5b0ccc4-a144-4027-91fa-49084ff07da2/environmentally-sensitive-areas-england },
+	url = {https://www.data.gov.uk/ dataset/a5b0ccc4-a144-4027-91fa-49084ff07da2/environmentally-sensitive-areas-england },
 
 }
 
@@ -160,7 +146,7 @@
 }
 @article{gamborg2019,
 	title = {Adjustive ecological restoration through stakeholder involvement: a case of riparian landscape restoration on privately owned land with public access},
-	author = {Gamborg, Christian and Morsing, Jonas and {Raulund{-}Rasmussen}, Karsten},
+	author = {Gamborg, C. and Morsing, J. and {Raulund{-}Rasmussen}, K.},
 	year = {2019},
 	month = {04},
 	date = {2019-04-29},
@@ -175,7 +161,7 @@
 
 @article{song2018,
 	title = {Global land change from 1982 to 2016},
-	author = {Song, Xiao-Peng and Hansen, Matthew C. and Stehman, Stephen V. and Potapov, Peter V. and Tyukavina, Alexandra and Vermote, Eric F. and Townshend, John R.},
+	author = {Song, X. and Hansen, M. C. and Stehman, S. V. and Potapov, P. V. and Tyukavina, A. and Vermote, E.F. and Townshend, J. R.},
 	year = {2018},
 	month = {08},
 	date = {2018-08},
@@ -190,7 +176,7 @@
 
 @article{raven2021,
 	title = {Agricultural intensification and climate change are rapidly decreasing insect biodiversity},
-	author = {Raven, Peter H. and Wagner, David L.},
+	author = {Raven, P. H. and Wagner, D. L.},
 	year = {2021},
 	month = {01},
 	date = {2021-01-11},
@@ -219,7 +205,7 @@
 
 @article{chazdon2016,
 	title = {A Policy{-}Driven Knowledge Agenda for Global Forest and Landscape Restoration},
-	author = {Chazdon, Robin L. and Brancalion, Pedro H. S. and Lamb, David and Laestadius, Lars and Calmon, Miguel and Kumar, Chetan},
+	author = {Chazdon, R.L. and Brancalion, P. H. S. and Lamb, D. and Laestadius, L. and Calmon, M. and Kumar, C.},
 	year = {2016},
 	month = {01},
 	date = {2016-01-04},
@@ -234,7 +220,7 @@
 
 @article{roodbergen2011,
 	title = {Revealing the contributions of reproduction and survival to the Europe-wide decline in meadow birds: review and meta-analysis},
-	author = {Roodbergen, Maja and van der Werf, Bert and {Hötker}, Hermann},
+	author = {Roodbergen, M. and van der Werf, B. and {Hötker}, H.},
 	year = {2011},
 	month = {08},
 	date = {2011-08-14},
@@ -264,7 +250,7 @@
 
 @article{roos2018,
 	title = {A review of predation as a limiting factor for bird populations in mesopredator{-}rich landscapes: a case study of the UK},
-	author = {Roos, Staffan and Smart, Jennifer and Gibbons, David W. and Wilson, Jeremy D.},
+	author = {Roos, St.n and Smart, J. and Gibbons, D. W. and Wilson, J. D.},
 	year = {2018},
 	month = {05},
 	date = {2018-05-22},
@@ -279,7 +265,7 @@
 
 @article{eglington2010,
 	title = {Managing water levels on wet grasslands to improve foraging conditions for breeding northern lapwing{\emph{Vanellus vanellus}}},
-	author = {Eglington, Sarah M. and Bolton, Mark and Smart, Mark A. and Sutherland, William J. and Watkinson, Andrew R. and Gill, Jennifer A.},
+	author = {Eglington, S. M. and Bolton, M. and Smart, M. A. and Sutherland, W. J. and Watkinson, A. R. and Gill, J. A.},
 	year = {2010},
 	month = {04},
 	date = {2010-04},
@@ -294,7 +280,7 @@
 
 @article{verhulst2011,
 	title = {Seasonal distribution of meadow birds in relation to in-field heterogeneity and management},
-	author = {Verhulst, Jort and Kleijn, David and Loonen, Willem and Berendse, Frank and Smit, Christian},
+	author = {Verhulst, J. and Kleijn, D. and Loonen, W. and Berendse, F. and Smit, C.},
 	year = {2011},
 	month = {08},
 	date = {2011-08},
@@ -309,7 +295,7 @@
 
 @article{malpas2013,
 	title = {The use of predator-exclusion fencing as a management tool improves the breeding success of waders on lowland wet grassland},
-	author = {Malpas, Lucy R. and Kennerley, Rosalind J. and Hirons, Graham J.M. and Sheldon, Rob D. and Ausden, Malcolm and Gilbert, Joanne C. and Smart, Jennifer},
+	author = {Malpas, L. R. and Kennerley, R. J. and Hirons, Graham J.M. and Sheldon, R. D. and Ausden, M. and Gilbert, J. C. and Smart, J.},
 	year = {2013},
 	month = {02},
 	date = {2013-02},
@@ -324,7 +310,7 @@
 
 @article{franks2018,
 	title = {Evaluating the effectiveness of conservation measures for European grassland{-}breeding waders},
-	author = {Franks, Samantha E. and Roodbergen, Maja and Teunissen, Wolf and Carrington Cotton, Anne and {Pearce{-}Higgins}, James W.},
+	author = {Franks, S. E. and Roodbergen, M. and Teunissen, W. and Carrington. C. A. and {Pearce{-}Higgins}, J. W.},
 	year = {2018},
 	month = {10},
 	date = {2018-10-09},
@@ -339,7 +325,7 @@
 
 @article{wilson2005,
 	title = {Changes in the numbers of breeding waders on lowland wet grasslands in England and Wales between 1982 and 2002},
-	author = {Wilson, Andrew M. and Vickery, Juliet A. and Brown, Andrew and Langston, Rowena H.W. and Smallshire, David and Wotton, Simon and Vanhinsbergh, Des},
+	author = {Wilson, A. M. and Vickery, J. A. and Brown, A. and Langston, R. H.W. and Smallshire, D. and Wotton, S. and Vanhinsbergh, D.},
 	year = {2005},
 	month = {03},
 	date = {2005-03},
@@ -350,4 +336,27 @@
 	doi = {10.1080/00063650509461374},
 	url = {http://dx.doi.org/10.1080/00063650509461374},
 	langid = {en}
+}
+
+@article{jackson1994,
+	title = {Breeding dispersal and site{-}fidelity in three monogamous wader species in the Western Isles, U.K.},
+	author = {Jackson, D. B.},
+	year = {1994},
+	month = {10},
+	date = {1994-10},
+	journal = {Ibis},
+	pages = {463--473},
+	volume = {136},
+	number = {4},
+	doi = {10.1111/j.1474-919x.1994.tb01123.x},
+	url = {http://dx.doi.org/10.1111/j.1474-919X.1994.tb01123.x},
+	langid = {en}
+}
+
+
+@article{hawkes2024,
+	title = {Landscape context influences efficacy of protected areas and agri-environment scheme delivery for waders breeding in lowland wet grassland},
+	author = {Hawes, R. W.},
+	year = {2024},
+	journal = {in prep},
 }
